platform-engineering/opa/gatekeeper/constrainttemplates/k8sdisallowprivileged_template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowprivileged
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowPrivileged
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowprivileged

        violation[{"msg": msg}] {
          container := input.review.object.spec.template.spec.containers[_]
          container.securityContext.privileged
          container.securityContext.privileged == true
          msg := sprintf("privileged container is not allowed: %s", [container.name])
        }
